Revision history for Perl extension Cpanel::JSON::XS

TODO: http://stevehanov.ca/blog/index.php?id=104 compression

3.0210 2015-12-03 (rurban)
       - improve cpanel_json_xs: more input and output formats
       - improved various spellings and add test

3.0209 2015-12-03 (rurban)
       - Fix nasty regression bug with allow_singlequote or relaxed,
         hanging with single quotes in normal strings. #54
         (reported by Quim Rovira)

3.0208 2015-12-02 (rurban)
       - Fix regression for is_bool([]), with unblessed references. #53
         (reported by Gregory Oschwald)

3.0207 2015-12-02 (rurban)
       - Fix regression decoding big strings (>16384). #50 (reported by Dan Book)
       - Ignore allow_barekey if we detect quotes. #51 (Fixed by Quim Rovira)
       - Skip some unicode tests with 5.6

3.0206 2015-11-30 (rurban)
       - Add support for escape_slash from JSON::PP. #47
       - Map sort_by to canonical from JSON::PP. #47
         reverse sort or sort by custom keys not yet possible/silently ignored.
       - Add support for allow_singlequote from JSON::PP. #47
       - Add support for allow_barekey from JSON::PP. #47
       - Add support for allow_bignum from JSON::PP. #47
       - relaxed uses now also allow_singlequote and allow_barekey.
       - Fixed t/20_unknown.t: SKIP when JSON is not available. #45
       - Fixed t/55_modifiable.t: Broaden the is check of true <5.12 #45
         (both reported by Paul Howarth)
       - Add t/zero-mojibake.t from JSON::PP testing all supported decoding
         options: none, utf8, ascii, latin1, binary.

3.0205 2015-11-29 (rurban)
       - Add t/20_unknown.t tests from JSON::PP, extended.
       - Fix convert_blessed, disallow invalid JSON. #46 (reported by Dan Book)
         convert_blessed returns now always a string, even for numbers.
       - Fix encountered GLOB error message (still in JSON::XS, and JSON::PP took
         over the wrong message also).